jobs/gerry-embeded/builds/115/log
Started by user [8mha:////4MzersSP/9cKUovrzPMuoS/kLqxVF8zd8yb1BUJ8RGIAAAAAmh+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzuEgYB/dLi1CL9nMzSXKDZQJMAv/Rqu8UAAAA=[0mliumengyang
Rebuilds build #[8mha:////4Evj7WJpiznfgYBOYZbbDiWBqa/gWv6kC+/EoIQHVpMvAAAAqR+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzmEgZl/bLM1HL91Nyk1JTUFP2s/CT99NSiokpdmIihoQkAyneqCNgAAAA=[0m114
Running as SYSTEM
Building remotely on [8mha:////4Mv+1wvIWl3OXIDGu6w3unSREX/fT0xpLFWon9eyySx4AAAAoR+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzuEgZR/eT83ILSktQi/eyMxJTEYt3kxCJzAF4ra8rKAAAA[0mkhadas-car7 (car7) in workspace /root/workspace/workspace/gerry-embeded
[WS-CLEANUP] Clean-up disabled, skipping workspace deletion.
[gerry-embeded] $ /bin/sh -xe /tmp/jenkins2899133031321526987.sh
+ bash /root/myscript/build/build.sh
++ export MYSQL_PWD=123
++ MYSQL_PWD=123
++ export -f cmdb_mysql
+ . /root/myscript/build/../sh/version-update.sh
++ . /root/.bashrc
+++ '[' -z '' ']'
+++ return
+ set -ex
+ export -f public_project_update
+ export -f project_build
+ init_project_env
++ date +%Y%m%d
+ DT=20240802
+ UserName=jenkins
+ API_TOKEN=11b65309c9835de9579d9c9038853d9eb7
+ GIT_PRIVATE_TOKEN=emEDrsaJVjxKK5gSWrf-
+ GIT_HOST=192.168.50.191
++ awk -F/ '{print $1"%2F"$2}'
++ echo wukong/integration/embedded
+ CONVERT_TARGET_PROJECT=wukong%2Fintegration
++ python -c 'import sys, json; print(json.load(sys.stdin)["id"])'
/root/myscript/build/build.sh: line 15: python: command not found
++ curl -XGET -H 'Content-Type: application/json' --header 'PRIVATE-TOKEN: emEDrsaJVjxKK5gSWrf-' http://192.168.50.191:85/api/v4/projects/wukong%2Fintegration
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0100    35  100    35    0     0    686      0 --:--:-- --:--:-- --:--:--   686
(23) Failed writing body
+ SUB_PROJECT_ID=
+ true
+ '[' -z ']'
+ SOURCE_DIR=/root/workspace/workspace/gerry-embeded/gerry
+ TARGET_DIR=/root/workspace/workspace/gerry-embeded/embedded
+ prepare_env
++ uname -m
+ system_platform=aarch64
+ :
++ uniq
++ sort
++ wc -l
++ grep processor
++ cat /proc/cpuinfo
+ mt=-j4
+ export COMMIT_ID_FILE=/root/workspace/workspace/gerry-embeded/_last_build_id
+ COMMIT_ID_FILE=/root/workspace/workspace/gerry-embeded/_last_build_id
+ export COMMIT_MSG_FILE=/root/workspace/workspace/gerry-embeded/_commit-msg
+ COMMIT_MSG_FILE=/root/workspace/workspace/gerry-embeded/_commit-msg
+ export COMMIT_MSG_FILE_TMP=/root/workspace/workspace/gerry-embeded/_commit-msg.tmp
+ COMMIT_MSG_FILE_TMP=/root/workspace/workspace/gerry-embeded/_commit-msg.tmp
+ rm -f /root/workspace/workspace/gerry-embeded/_last_build_id
+ rm -f /root/workspace/workspace/gerry-embeded/_commit-msg
+ rm -f /root/workspace/workspace/gerry-embeded/_commit-msg.tmp
+ rm -f /root/workspace/workspace/gerry-embeded/result.log
+ rm -f /root/workspace/workspace/gerry-embeded/no_code_change.log
+ sign_env
+ CONFIG_DIR_SET=/root/system
+ CONFIG_BRANCH=mind_os
+ CLONE_DEPTH=--depth=1
+ CONFIG_DIR=/root/system/i18rconfig
+ CONFIG_REMOTE='git clone ssh://git@192.168.50.191:222/AroundI18RProject/i18rconfig /root/system/i18rconfig -b mind_os --depth=1'
+ [[ aarch64 =~ x86_64 ]]
+ ENCRYPTION_TOOL=/root/system/i18rconfig/encrypt
+ CLONE_DEPTH=--depth=1
+ PUBLICBASETYPES_DIR=/root/system/I18RPublicBaseTypes
+ cmdb_mysql 'insert into prebuild(job_name,source_project,source_branch,target_project,target_branch,time,build_url,node_name,build_user) values ('\''gerry-embeded'\'','\''EmbeddedGroup/gerry/gerry'\'','\''master'\'','\''wukong/integration/embedded'\'','\''master'\'',now(),'\''http://192.168.50.191:8088/job/gerry-embeded/115/'\'','\''khadas-car7'\'','\''liumengang'\'')'
+ set +x
+ DOCKER_CONTAINER_I18=build-x64-18.04
+ DOCKER_CONTAINER_RUBBY=c405
+ DOCKER_CONTAINER_RUBBY_INSIDE=c3566
+ DOCKER_CONTAINER_JAVA=node
+ JENKINS_JOB_A=mind
+ JENKINS_JOB_B=rbn
+ JENKINS_JOB_C=mark-check-tools
+ JENKINS_JOB_D=java
+ JENKINS_JOB_E=clean_recorder
+ JENKINS_JOB_F=i18r
+ JENKINS_JOB_G=nodejs
+ JENKINS_JOB_H=_ui
+ JENKINS_JOB_L=i12r
+ [[ gerry-embeded =~ mind ]]
+ '[' false = false ']'
+ source_project_update
+ '[' -d /root/workspace/workspace/gerry-embeded/gerry ']'
+ pushd /root/workspace/workspace/gerry-embeded/gerry
~/workspace/workspace/gerry-embeded/gerry ~/workspace/workspace/gerry-embeded
+ git checkout ./
Updated 1 path from the index
+ git pull --rebase
From ssh://192.168.50.191:222/EmbeddedGroup/gerry/gerry
   d05a692..0552079  master     -> origin/master
Updating d05a692..0552079
Fast-forward
 sensor/core/tof_module/src/Tof.cpp | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
Current branch master is up to date.
+ popd
~/workspace/workspace/gerry-embeded
+ target_project_update
+ rm -rf /root/workspace/workspace/gerry-embeded/embedded
+ target_project_fetch
+ git clone ssh://git@192.168.50.191:222/wukong/integration/embedded -b master --depth=1
Cloning into 'embedded'...
+ insert_db
+ pushd /root/workspace/workspace/gerry-embeded/gerry
~/workspace/workspace/gerry-embeded/gerry ~/workspace/workspace/gerry-embeded
++ cmdb_mysql 'SELECT first_commit_id FROM prebuild where source_project='\''EmbeddedGroup/gerry/gerry'\'' and source_branch='\''master'\'' and target_project='\''wukong/integration/embedded'\'' and target_branch='\''master'\'' and status='\''0'\'' and job_name='\''gerry-embeded'\'' order by id desc limit 1;'
++ set +x
+ version='first_commit_id
d05a692'
++ awk -F ' ' '{print $2}'
++ echo first_commit_id d05a692
+ version=d05a692
++ git log -1 --pretty=format:%h
+ first_commit_id_now=0552079
+ cmdb_mysql 'update prebuild set first_commit_id='\''0552079'\'' where build_url='\''http://192.168.50.191:8088/job/gerry-embeded/115/'\'';'
+ set +x
+ popd
~/workspace/workspace/gerry-embeded
+ [[ aarch64 =~ x86_64 ]]
+ [[ gerry-embeded =~ i18r ]]
+ project_build
+ pushd /root/workspace/workspace/gerry-embeded/gerry
~/workspace/workspace/gerry-embeded/gerry ~/workspace/workspace/gerry-embeded
+ project_init_remote
++ find -type f -name sync_submodules.sh
+ sf=
+ '[' -z ']'
+ git submodule update --init --recursive
Submodule path 'messages': checked out 'befadb66d459b1ef804315e5a3bca53a116e4b74'
+ git submodule update --remote
Submodule path 'messages': checked out 'c7ce2588758572a9f70a6bdf6099074e5ba5a659'
+ sed -i 's/make -j[0-9].*/make -j4/g' build.sh
+ '[' -z ']'
+ '[' x0552079 == xd05a692 ']'
+ bash -ex build.sh
++ wc -l
++ grep processor
++ cat /proc/cpuinfo
+ NR=6
++ uname -m
+ PLATFORM=aarch64
+ echo 'now platform is aarch64 ...'
now platform is aarch64 ...
+ [[ 0 -gt 0 ]]
+ '[' aarch64 = x86_64 ']'
+ '[' aarch64 = aarch64 ']'
+ arm64_compile_arm64
+ '[' '!' -d build_arm64 ']'
+ cd build_arm64
+ cmake -DCOMPILE_FOR_SDK=OFF -DCROSS_COMPILE_ENABLE=OFF ..
LIBRARY_OUTPUT_PATH /root/workspace/workspace/gerry-embeded/gerry/install/lib/arm ..................
EXECUTABLE_OUTPUT_PATH /root/workspace/workspace/gerry-embeded/gerry/install/bin/arm .....................
-- BUILD_ROS_NODE=OFF
-- emb_common version is 1.0.3
-- imsee version is 1.0.3
-- KeyBoard version is 1.0.3
-- McuData version is 1.0.3
-- multimodule version is 1.0.3
-- sensorControl version is 1.0.3
third lib ---------/root/workspace/workspace/gerry-embeded/gerry/sensor/core/tof_module/third_lib/arm64
-- tof_module version is 1.0.3
-- sensor_plugin version is 1.0.3
-- test_plugin version is 1.0.3
-- sensor_subscriber_plugin version is 1.0.3
-- Configuring done
-- Generating done
-- Build files have been written to: /root/workspace/workspace/gerry-embeded/gerry/build_arm64
+ make -j6
[ 16%] Built target emb_common
[ 19%] Built target sensorControl
[ 22%] Built target KeyBoard
[ 26%] Built target monitor_node
[ 28%] Built target test_plugin
[ 30%] Built target sensor_subscriber_plugin
[ 59%] Built target imsee
[ 66%] Built target McuData
[ 70%] Built target multi_main
[ 72%] Built target multimodule
Scanning dependencies of target tof_module
[ 73%] Building CXX object sensor/core/tof_module/src/CMakeFiles/tof_module.dir/Tof.cpp.o
/root/workspace/workspace/gerry-embeded/gerry/sensor/core/tof_module/src/Tof.cpp: In member function ‘void emb_node::lygtof::ReadTofData()’:
/root/workspace/workspace/gerry-embeded/gerry/sensor/core/tof_module/src/Tof.cpp:140:12: error: ‘lastTime’ does not name a type
  140 |     static lastTime = 0;
      |            ^~~~~~~~
/root/workspace/workspace/gerry-embeded/gerry/sensor/core/tof_module/src/Tof.cpp:141:8: error: ‘lastTime’ was not declared in this scope
  141 |     if(lastTime == timeStamp){
      |        ^~~~~~~~
/root/workspace/workspace/gerry-embeded/gerry/sensor/core/tof_module/src/Tof.cpp:130:23: warning: unused variable ‘framelen’ [-Wunused-variable]
  130 |     unsigned long int framelen = frame->data_bytes;
      |                       ^~~~~~~~
/root/workspace/workspace/gerry-embeded/gerry/sensor/core/tof_module/src/Tof.cpp:116:12: warning: unused variable ‘nowTime’ [-Wunused-variable]
  116 |   uint64_t nowTime = 0;
      |            ^~~~~~~
make[2]: *** [sensor/core/tof_module/src/CMakeFiles/tof_module.dir/build.make:63: sensor/core/tof_module/src/CMakeFiles/tof_module.dir/Tof.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:627: sensor/core/tof_module/src/CMakeFiles/tof_module.dir/all] Error 2
make: *** [Makefile:84: all] Error 2
Build step 'Execute shell' marked build as failure
Finished: FAILURE
